# KAST

./: .gitignore  ACCEPTANCE_CRITERIA.md  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  LICENSE  PROJECT_SPEC.md  README.md  SECURITY.md  SKILLS.md  TOOLS.md  opencode.json  sdkconfig  sdkconfig.defaults
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.opencode/agents/: architect.md  firmware-engineer.md  product-analyst.md  qa-engineer.md  technical-writer.md
.opencode/skills/feature-artifacts/: SKILL.md
.opencode/skills/implementation-plan/: SKILL.md
.opencode/skills/product-spec/: SKILL.md
.opencode/skills/quality-gate/: SKILL.md
.opencode/skills/release-notes-github/: SKILL.md
UI/: project.info
UI/screens/: ui_Screen1.c  ui_Screen1.h
features/001-2026-07-06-device-settings-captive-portal/: ACCEPTANCE_CRITERIA.md  FEATURE_SPEC.md  IMPLEMENTATION_PLAN.md
hardware/: ASSEMBLY.md  BOM.md  README.md  REVISIONS.md
hardware/3d-print/: LICENSE.md  README.md
hardware/3d-print/enclosure/: all_parts.3mf  all_parts_universal_band.3mf  molds.3mf
hardware/3d-print/source/: KA-001-3D - Base plate.step  KA-002-3D - Frontal case.step  KA-003-3D - Main button.step  KA-004-3D - Counter button.step  KA-005-3D - Back case.step  KA-007-S - Band.step  KA-008-3D - Band holder V2 (for extrnal band).step  KA-008-3D - Band holder.step  README.md  (+1 more)
main/: CMakeLists.txt  app_types.h  idf_component.yml  main.c  storage.c  storage.h  wifi_portal.c  wifi_portal.h
(+3 files in other folders)
